src/css/content/markdown.scss
body .markdown {
  position: relative;
  --ifm-h2-vertical-rhythm-top: 1.8;
  --ifm-list-margin: 0.25em;
}

.markdown pre,
.markdown ul,
.markdown ol,
.markdown p {
  &:not(:first-child) {
    margin-top: var(--ifm-leading);
    margin-bottom: 0;

    &:where(ul, ol) {
      margin-top: calc(2*var(--ifm-list-margin)) !important;
    }
  }
}

.markdown h1:first-child {
  font-size: 2.5rem;
}

.markdown summary {
  font-weight: 500;
}

.markdown ul > li {
  margin-top: 0 !important;
}

.markdown > h2 {
  margin-top: 2em !important;
  &:target::before {
    top: -15px !important;
  }
}

.markdown > *:not(header) + h2 {
  line-height: 1.2em;
  border-top: 1px solid #f1f1f1;
  padding-top: 1.8em;
  &:target::before {
    top: 35px !important;
  }
}

.markdown h3 {
  margin-top: 2.8em;
  line-height: 1.2em;
}

.markdown .step_src-components-Step- {
  margin-top: 0.8em !important;
}

.markdown .step_src-components-Step- + h2,
.markdown .step_src-components-Step- + h3,
.markdown .step_src-components-Step- + h4,
.markdown .step_src-components-Step- + h5,
.markdown .step_src-components-Step- + p {
  display: inline-block;
  margin-top: 1em;
  margin-bottom: 0.9em;
}

.markdown .admonition {
  margin-top: var(--ifm-leading);

  *:last-child {
    margin-bottom: 0 !important;
  }

  .admonition-heading {
    code {
      text-transform: none;
      padding: 0.3em 0.5em;
    }
  }
}

.markdown pre code {
  padding-right: 0;
}

.markdown pre code .token-line {
  display: table;
  min-width: 100%;
  max-width: none;
  width: auto;
  padding-right: 3em !important;
  margin-right: 0 !important;
}

.markdown pre code .token-line.docusaurus-highlight-code-line {
  min-width: calc(100% + 1.1em);
}

.markdown .codeBlockTitle_node_modules-\@docusaurus-theme-classic-src-theme-CodeBlock- {
  background: transparent!important;
  display: none;
}

.markdown [role="tab"],
.markdown .prism-code,
code {
  outline: none;
}

html body .markdown button[aria-label="Copy code to clipboard"],
html body pre.prism-code > button {
  margin-top: 0.45em !important;
  box-shadow: 0 0 0 8px #050b24;
}

.markdown * {
  position: relative;
}

.hash-link,
.hash-link:hover {
  color: var(--ifm-color-primary);
  text-decoration: none;
}

// This section controls the highlights effect of the :target. It is used to
// respond to #hash links and show visual feedback on the relevant section.
//
// The way this is done is by drawing a line on the left side of the section.
// This is accomplished by applying ::before to all elements in the section.
// This method works but does need some manual tweaks depending on specific
// exceptions.

.markdown :target,
h2:target ~ *:not(h2, h2:target ~ *:where(h1, h2):not(:target) ~ *),
h3:target ~ *:not(h2, h3, h3:target ~ *:where(h1, h2, h3):not(:target) ~ *),
h4:target ~ *:not(h2, h3, h4, h4:target ~ *:where(h1, h2, h3, h4):not(:target) ~ *) {
  &:where(:not(details *))::before {
    content: " ";
    width: 4px;
    position: absolute;
    left: -16px;
    top: -40px;
    bottom: calc(-1.5*var(--ifm-paragraph-margin-bottom));
    background: var(--ifm-color-primary);
    z-index: -1;

    @media (min-width: 1660px) {
      & {
        left: -30px;
      }
    }
  }

  &:where(h2, h1):target::before {
    top: calc(2em - 15px);
  }

  &.admonition::before {
    margin-left: -4px;
  }

  &.alert::before {
    margin-left: -5px;
  }

  &:where(.config-field, .group)::before {
    margin-left: -1px;
  }

  &:where(details)::before {
    margin-left: -1px !important;
  }
}


span:target::before {
  bottom: -5px;
}

details .active-section::before {
  display: none;
}

blockquote.active-section::before {
  left: -25px;
}

.markdown h4 {
  font-size: 1.15em;
  margin-bottom: 0.4em;
}

.markdown h2:not(:first-of-type) {
  margin-top: 3em;
}

.markdown summary > * {
  display: inline;
  font-size: inherit;
  font-weight: inherit;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.markdown h2 + h3 {
  margin-top: 1.5em !important;
}

h3.active-section::before {
  top: -2.4em;
}

*:not(.active-section) + h2.active-section::before,
*:not(.active-section) + h3.active-section::before {
  top: -0.5em;
}

.markdown button {
  background: var(--ifm-color-primary);
  border: 1px solid var(--ifm-color-primary-darker);
  color: #fff;
  border-radius: 4px;
  padding: 0.6em 1em;
  margin: 0 0.2em;
  font-size: 0.9em;
  font-weight: 600;
  cursor: inherit;
  letter-spacing: 0.5px;
  transition: background-color 0.2s;
}

.markdown button:hover {
  background: var(--ifm-color-primary-darker);
  border-color: var(--ifm-color-primary-darker);
}

.markdown p > button {
  pointer-events: none;
}

.markdown button svg {
  transform: scale(1.4);
}

.markdown details {
  --docusaurus-details-decoration-color: var(--ifm-color-primary);
  --ifm-tabs-color-active-border: var(--ifm-color-primary) !important;
  --docusaurus-details-transition: transform var(--ifm-transition-fast) ease;
  margin: var(--ifm-spacing-vertical) 0;
  border-color: var(--ifm-color-emphasis-300);
  border-style: solid;
  border-width: var(--ifm-alert-border-width);
  border-left-width: 4px;
  border-left-color: transparent;
  background: #fff;
  border-radius: 0;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px;
}

.markdown .admonition {
  margin-left: -1px;
  border-radius: 4px;
}

.-contains-target-link {
  box-shadow: 0 0 14px 0 var(--ifm-color-primary) !important;
  border-color: transparent !important;
  transform: scale(1.01);
  z-index: 1;
  position: relative;
  background: #fff !important;
}

